try to fix hash link on mobile. Also break words in entry view history for mobile

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -466,13 +466,13 @@ a.tooltips span.tooltips-text {
   position: absolute;
   width:140px;
   color: #FFFFFF;
-  top: 100%;
+  top: 1250%;
   left: 50%;
   bottom: 40px;
   margin-left: -65px;
   background: #000000;
   font-size: 0.8rem;
-  height: 70px;
+  height: 90px;
   line-height: 1.1rem;
   text-align: center;
   visibility: hidden;
@@ -611,6 +611,7 @@ table.responsive  th  {
 
 .history p {
   font-size: 1rem;
+  word-break: break-all;
 }
 
 .information h2 {
